# Tac_test

./: .gitignore  README.md  tac_test_env.yml
Tac3D/assets/object/: stick_small.urdf
Tac3D/assets/robot/rg2_tac3d_description/: CMakeLists.txt  package.xml
Tac3D/assets/robot/rg2_tac3d_description/launch/: rg2_tac3d_dual_rviz.launch  rg2_tac3d_left_rviz.launch  rg2_tac3d_right_rviz.launch
Tac3D/assets/robot/rg2_tac3d_description/meshes/visual/: Finger_link_STL.STL  LeftFinger STL.STL
Tac3D/assets/robot/rg2_tac3d_description/urdf/: _rg2_tac3d_dual_pybullet_tmp.urdf  rg2_tac3d_dual.urdf  rg2_tac3d_dual.urdf.xacro
Tac3D/assets/robot/ur5_rg2_tac3d_description/: CMakeLists.txt  package.xml
Tac3D/assets/robot/ur5_rg2_tac3d_description/meshes/tac3d/: tac3d_dl1_sensor_vis.STL
Tac3D/assets/robot/ur5_rg2_tac3d_description/urdf/: ur5_rg2_tac3d.urdf
Tac3D/assets/sensor/: tac3d_depth_carrier.urdf
Tac3D/assets/sensor/Tac3D/urdf/: Tac3D_DL1_URDF.urdf
Tac3D/conf/: tac3d_demo.yaml
Tac3D/conf/sensor/: config_tac3d_local.yml  tac3d_rolling.yaml
Tac3D/demos/: demo_pybullet_rg2_tac3d_test.py  demo_pybullet_tac3d.py  demo_pybullet_tac3d_rolling.py  demo_pybullet_tac3d_test.py  demo_pybullet_ur5_rg2_tac3d_control_tacto_test.py
tacto/: config_tac3d.yml
